--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://i.imgur.com/pAaS3mc.png" />
+    <link rel="icon" type="image/png" sizes="16x16 32x32 64x64" href="https://i.imgur.com/pAaS3mc.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>North Coast Junk Removal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
